package org.example.proto.Domain;

public class Gebruiker {
    private String voornaam;
    private String achternaam;
    private String geboortedatum;
    private String adres;
    private String email;
    private String telefoonnummer;
    private String IBAN;
}
